sylvia/tests/ui/attributes/msg/overlapping_reply_handlers.stderr
error: Duplicated reply handler.

         = note: Previous definition of handler=`HANDLER_1_REPLY_ID` for reply_on=`always` defined on `fn reply_always()`

  --> tests/ui/attributes/msg/overlapping_reply_handlers.rs:27:32
   |
27 |     #[sv::msg(reply, handlers=[handler1], reply_on=success)]
   |                                ^^^^^^^^

error: Duplicated reply handler.

         = note: Previous definition of handler=`HANDLER_2_REPLY_ID` for reply_on=`error` defined on `fn some_reply()`

  --> tests/ui/attributes/msg/overlapping_reply_handlers.rs:42:8
   |
42 |     fn handler2(&self, _ctx: ReplyCtx, _reply: Reply) -> StdResult<Response> {
   |        ^^^^^^^^
